crates/ars-components/src/utility/landmark/snapshots/ars_components__utility__landmark__tests__landmark_fallback_banner.snap
---
source: crates/ars-components/src/utility/landmark.rs
expression: snapshot_attrs(&attrs)
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "landmark",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Fallback landmark",
            ),
        ),
        (
            Id,
            String(
                "fallback-banner",
            ),
        ),
        (
            Role,
            String(
                "banner",
            ),
        ),
    ],
    styles: [],
}
