crates/ars-components/src/utility/landmark/snapshots/ars_components__utility__landmark__tests__landmark_fallback_form.snap
---
source: crates/ars-components/src/utility/landmark.rs
expression: snapshot_attrs(&attrs)
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "landmark",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Fallback landmark",
            ),
        ),
        (
            Id,
            String(
                "fallback-form",
            ),
        ),
        (
            Role,
            String(
                "form",
            ),
        ),
    ],
    styles: [],
}
