crates/ars-components/src/utility/landmark/snapshots/ars_components__utility__landmark__tests__landmark_fallback_search.snap
---
source: crates/ars-components/src/utility/landmark.rs
expression: snapshot_attrs(&attrs)
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "landmark",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Fallback landmark",
            ),
        ),
        (
            Id,
            String(
                "fallback-search",
            ),
        ),
        (
            Role,
            String(
                "search",
            ),
        ),
    ],
    styles: [],
}
