crates/ars-components/src/utility/landmark/snapshots/ars_components__utility__landmark__tests__landmark_root_labelledby_takes_precedence.snap
---
source: crates/ars-components/src/utility/landmark.rs
expression: snapshot_attrs(&attrs)
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "landmark",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "external-label",
            ),
        ),
        (
            Id,
            String(
                "labelledby",
            ),
        ),
    ],
    styles: [],
}
