crates/ars-components/src/utility/landmark/snapshots/ars_components__utility__landmark__tests__landmark_root_main.snap
---
source: crates/ars-components/src/utility/landmark.rs
expression: "snapshot_attrs(&api(Props::new().id(\"main\").role(Role::Main)).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "landmark",
            ),
        ),
        (
            Id,
            String(
                "main",
            ),
        ),
    ],
    styles: [],
}
